-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0 Alpha
-
None
-
05e5adc34cc310440a848f099d90d2eb9740d77c
The QML requisites table doesn't show Button as the base type, for example. And the list of all members page is thus empty.
For Gerrit Dashboard: QTBUG-34173 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
68809,3 | qdoc: Corrected error in QDocDatabase::findQmlType() | stable | qt/qtbase | Status: MERGED | +2 | 0 |