src/tools/qdoc/qmlvisitor.h
@@ -75,8 +75,8 @@ public:
                   const QSet<QString> &topics);
     virtual ~QmlDocVisitor();
 
-    bool visit(QQmlJS::AST::UiImportList *imports);
-    void endVisit(QQmlJS::AST::UiImportList *definition);
+    bool visit(QQmlJS::AST::UiImport *import);
+    void endVisit(QQmlJS::AST::UiImport *definition);
 
     bool visit(QQmlJS::AST::UiObjectDefinition *definition);
     void endVisit(QQmlJS::AST::UiObjectDefinition *definition);
